src/app/front-end/nav/nav.component.scss
// sass-lint:disable nesting-depth
@import '../../../variables';
$nav-gray: #e7e7e7;
$nav-shaddow: rgba(0, 0, 0, .175);
$nav-shaddow-light: rgba(0, 0, 0, .15);

.nav {
  background-color: $nav-light-gray;
  display: flex;
  justify-content: space-between;

  // top container holds the home button, and mobile only nav buttons (toggle nav, etc)
  .top-container {
    display: flex;
    justify-content: space-between;
    padding: 2px 10px;

    .home {
      align-items: center;
      display: flex;
      font-size: 44px;
      padding: 2px;
    }

    .mobile-nav {
      display: none;
      font-size: 20px;
      margin-left: auto;
    }

    .toggle-audio-details {
      display: none;
    }
  }

  .top-container,
  .item {
    a {
      &,
      &:hover,
      &:active {
        color: $black;
        display: block;
      }
    }

    > a {
      padding: 10px;
    }
  }

  .items {
    align-items: center;
    display: flex;
    justify-content: space-between;
    width: 100%;

    .left,
    .right {
      display: flex;
      height: 100%;
      justify-content: space-between;
    }

    .left {
      margin-right: auto;
    }

    .right {
      margin-left: auto;
    }

    .item {
      align-items: center;
      display: flex;
      padding: 10px;

      app-button-clear {
        padding: 0;
      }

      &.active {
        background-color: $nav-gray;
      }
    }
  }
  @media (max-width: $mobile-break-point) {
    display: initial;

    .top-container {
      .toggle-audio-details {
        &.started {
          display: flex;
          font-size: 20px;

          .playing {
            color: $pv-green;
          }
        }
      }

      .home {
        left: 0;
        margin: auto;
        position: absolute;
        right: 0;
        top: 9px;
        width: 44px;
      }

      .mobile-nav {
        display: initial;
      }
    }

    .top-container,
    .item {
      a {
        &,
        &:hover,
        &:active {
          display: flex;
        }
      }
    }

    .items {
      border-top: 1px solid $light-gray;
      display: block;
      height: 0;
      overflow: hidden;

      &.open {
        height: initial;
      }

      .left,
      .right {
        display: initial;

        .item {
          background-color: $white;
          border-bottom: 1px solid $light-gray;
          display: block;
          padding-left: 0;
          padding-right: 0;
          text-align: center;

          > a {
            display: inline-block;
          }

          &.active {
            padding-bottom: 0;
          }
        }
      }
    }

    .sub-items-container {
      border-bottom: 0;
      box-shadow: none;
      position: initial;

      .sub-items {
        padding-top: 10px;
        width: 100%;
      }
    }

    .sub-item {
      background-color: $very-light-gray;
      border-top: 1px solid $light-gray;
      margin: 0;
      padding: 10px 0;
      width: 100%;

      app-nav-link {
        display: block;
        height: initial;
        padding-bottom: 0;
        text-align: center;
      }
    }
  }
}

.sub-items-container {
  background-color: $white;
  height: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 68px;
  z-index: 3;

  &.active {
    border-bottom: 1px solid $nav-shaddow-light;
    box-shadow: 0 6px 12px $nav-shaddow;
    height: initial;
  }

  .sub-items {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    margin: 0 auto;
    max-width: 900px;
    width: 80%;
  }
}

.sub-item {
  margin: 20px 2%;
  text-align: center;
  width: 29.33%;
}

